--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: CALLP - LFA - UMSA
+title: Complete Analysis LIDAR La Paz
 description: Documentación del código LIDAR La Paz
 theme: just-the-docs
 
