--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ theme: just-the-docs
 url: https://ludcano.github.io/callp-docs
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Repositorio: http://github.com/LFAUMSA/LIDAR_PYTHON
